// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/TextAlign handles responsive value 1`] = `
{
  "variables": {
    "--rs-text-align-l": "end",
    "--rs-text-align-m": "center",
    "--rs-text-align-s": "start",
  },
}
`;

exports[`Styles/TextAlign handles undefined value 1`] = `null`;

exports[`Styles/TextAlign handles value 1`] = `
{
  "variables": {
    "--rs-text-align-s": "start",
  },
}
`;
